Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12611

LNet Routing: don't stop adding routes for any error

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.13.0
    • None
    • None
    • 3
    • 9223372036854775807

      When adding routes from lnetctl align the behavior to be similar to adding routes from module parameters. IE, continue adding the rest of the routes specified even if the current route already exists or the host is not reachable.

            ashehata Amir Shehata (Inactive)
            ashehata Amir Shehata (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: