LU-12611 lnet: continue adding routes

Continue adding routes specified even if the current route
exists or the gateway specified in the current route is unreachable.

Signed-off-by: Amir Shehata <ashehata@whamcloud.com>
Change-Id: I71257cd444c29d4641d9d27f05d9160871316b02
Reviewed-on: https://review.whamcloud.com/35641
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Chris Horn <hornc@cray.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Alexandr Boyko <c17825@cray.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>